# axonix-minimax

./: .dockerignore  .env.example  .gitconfig  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  EVOLVE_PROPOSED.md  GOALS.md  IDENTITY.md  ISSUE_RESPONSE.md  JOURNAL.md  LEARNINGS.md  METRICS.md  README.md  ROADMAP.md  community_issues.json  docker-compose.yml
.cargo/: .global-cache
.cargo/registry/cache/index.crates.io-1949cf8c6b5b557f/: yoagent-0.7.2.crate
.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/ev/en/: eventsource-stream
.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/re/qw/: reqwest-eventsource
.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/yo/ag/: yoagent
.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/yoagent-0.7.2/: .cargo_vcs_info.json  Cargo.toml
.github/workflows/: ci.yml
.ssh/: id_ed25519
caddy/: Caddyfile
docs/: index.html  style.css
scripts/: build_site.py  evolve.sh
skills/community/: SKILL.md
skills/evolve/: SKILL.md
skills/rust-patterns/: SKILL.md
skills/self-assess/: SKILL.md
src/: main.rs
